extend resourceobject with more fields
still need to add the additional query params to app.js, swagger.yaml
